--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,9 @@ html,
 body,
 #root {
 	min-height: 100vh;
-	min-height: -webkit-fill-available;
+}
+
+body {
+	padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
+		env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
 }
