--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,5 @@
 html,
 body,
 #root {
-	min-height: 100vh;
-}
-
-body {
-	padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
-		env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
+	height: 100%;
 }
